--- a/MiRadio-Startup/appsettings.json
+++ b/MiRadio-Startup/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaConexion": "Data Source=MiRadioStarUp.db"
+    "CadenaConexion": "Data Source=SQL8010.site4now.net;Initial Catalog=db_aaa852_sis2420b;User Id=db_aaa852_sis2420b_admin;Password=Radio123"
   }
 }
